First working draft for controls, player naming and deaths.

--- a/src/App.css
+++ b/src/App.css
@@ -10,20 +10,19 @@
 .playerSection {
   display: flex;
   flex-direction: row;
+  background-color: lightcoral;
 }
 
 .playerContainer {
-  display: flex;
-  flex-direction: row;
   padding: 20px;
   margin: 20px;
   background-color: lightblue;
-  width: auto;
 }
 
 .player {
   display: flex;
   flex-direction: column;
+  margin: 20px;;
 }
 
 .controlsContainer {
@@ -35,4 +34,9 @@
   margin: 20px;
   padding: 20px;
   background-color: lightblue;
+}
+
+.setupContainer {
+  display: flex;
+  flex-direction: row;
 }
