--- a/src/App.css
+++ b/src/App.css
@@ -7,10 +7,19 @@
   font-size: calc(10px + 1vmin);
 }
 
+.header {
+  width: 100%;
+  margin: 0 0 50px 0;
+  font-family: 'Franklin Gothic Medium', 'Arial Narrow', Arial, sans-serif;
+  font-size: 1rem;
+  color: lightsalmon;
+  background-color: darkred;
+}
+
 .playerSection {
   display: flex;
   flex-direction: row;
-  background-color: lightcoral;
+  background-color: lightsalmon;
 }
 
 .player {
@@ -18,7 +27,7 @@
   flex-direction: column;
   margin: 20px;
   padding: 20px;
-  background-color: lightblue;
+  background-color: lightsalmon;
 }
 
 .playerContainer {
@@ -35,10 +44,26 @@
 .control {
   margin: 20px;
   padding: 20px;
-  background-color: lightblue;
+  background-color: lightsalmon;
 }
 
 .setupContainer {
   display: flex;
   flex-direction: row;
+}
+
+button {
+  padding: 10px 20px;
+  background-color: red;
+  font-size: 16px;
+  font-weight: 700;
+  border: none;
+}
+
+button:disabled {
+  background-color: grey;
+}
+
+button:hover:enabled {
+  background-color: salmon;
 }
