--- a/src/App.css
+++ b/src/App.css
@@ -3,8 +3,11 @@
   display: flex;
   flex-direction: column;
   align-items: center;
-  justify-content: center;
   font-size: calc(10px + 1vmin);
+  background-image: url(./images/taton-moise-ny3xv3Lzg9s-unsplash.jpg);
+  background-repeat: no-repeat;
+  background-size: cover;
+  height: 100vh;
 }
 
 .playerSection {
