Updated background image

--- a/src/App.css
+++ b/src/App.css
@@ -4,7 +4,7 @@
   flex-direction: column;
   align-items: center;
   font-size: calc(10px + 1vmin);
-  background-image: url(./images/taton-moise-ny3xv3Lzg9s-unsplash.jpg);
+  background-color: darkred;
   background-repeat: no-repeat;
   background-size: cover;
   height: 100vh;
